eks/nginx/01-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
  name: ppp-grpc-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - ppp.marcos-candeia.com
      secretName: grpc-key
  rules:
    - host: ppp.marcos-candeia.com
      http:
        paths:
          - backend:
              serviceName: ppp-grpc
              servicePort: grpc
